# infrastructure-v1

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code_check.yml  homeassistant.yml  service_test.yml  services.yml  setup_environment.yml
tests/: __init__.py  conftest.py
tests/services/: test_homeassistant.py  test_nginx_proxy_manager.py  test_website.py
tests/services/fixtures/: homeassistant.py
